web/css/account.css
/* ... */
.account-header{
	border-bottom: 1px solid #D0D0D0;
	padding: 10px 10px 10px 20px;
	background-color: #f7f7f7;
	overflow: hidden;
	border-radius: 7px 7px 0 0;
}
.account-container .user-name-wrapper{
	float: left;;
	margin-left: 20px;
}
.account-settings{
	padding: 10px 10px 20px 20px;
}
.content{
	padding: 10px 10px 10px 10px;
}
.sub-content1{
	float: left;
	margin-right: 150px;
}
.sub-content2 {
  float: left;
}
.logout, .admin-button {
	float: right;
	padding-top: 6px;
	margin-left: 30px;
	font-size: 14px;
}
.mobile-logout{
	display: none;
}
.admin-button{
	display: none;
}
.accountNav {
  width: 90%;
  margin: 20px auto;
  padding-top: 23px;
  overflow: auto;
  max-width: 1100px;
}
.backNav {
  float: left;
  position: relative;
}
.backNav-mobile{
	display: none;
}
.backNav span {
	font-family: 'BrandonGrotesque-Bold';
	font-size: 16px;
	position: relative;
	width: 188px;
	bottom: 7px;
	left: 10px;
	color: #353535;
}
.account-settings li{
	margin-bottom: 10px;
}
/*==================================*\
			&ACCORDION
\*==================================*/
ul.accordion-content li {
  display: inline-block;
  padding: 20px;
}
.accordion-header{
	border-top: 1px solid #ADADAD;
	padding-left: 20px;
	cursor: pointer;
	padding-top: 10px;
	padding-bottom: 10px;
}
.accordion-header h4{
	font-family: 'BrandonGrotesque-bold';
	font-weight: normal;
}
.accordion-header h4:nth-child(2){
	font-family: 'BrandonGrotesque-Light';
	font-weight: normal;
}
.accordion-content{
	display: none;
}
.row{
	display: table;
	border-spacing: 10px 10px;
	border-collapse: separate;
}
.accordion-subcontent{
	display: table-cell;
	vertical-align: top;
	padding-left: 10px;
}
.accordion-subcontent:first-child,.accordion-subcontent:nth-child(2){
	width: 15%;
}
.accordion-subcontent:nth-child(3){
	width: 20%;
}
.accordion-subcontent:nth-child(4){
	width: 25%;
}
.order-head{
	font-weight: bold;
	color: #000;
	float: left;
	width: 100%;
}
.order-content{
	float: left;
	padding-top: 15px;
}
.order-content span{
	width: 100%;
	float: left;
}

/*==================================*\
			&FORM
\*==================================*/
.account-wrapper{
	width: 90%;
	margin: 0 auto;
	/*overflow: auto;*/
	max-width: 1100px;
}
form.form{
	width: 60%;
	padding-left: 20px;
}
form.gift-cardform{
	width: 45%;
}
form.gift-cardform .redeem {
	padding-left: 20px;
  padding-top: 20px;
}
.first-name,.last-name,.phone-num,.redeem{
	max-width: 270px;
	/* float: left; */
	position: relative;
	width: 100%;
}
.notify,.update-button {
  width: 100%;
  /*float: left;*/
  padding-left: 20px;
  padding-top: 10px;
  padding-bottom: 30px;
}
 .notify input[type="checkbox"]{
 	float: left;
 }
 .changepassword-container{
 	padding: 20px 0px 20px 0px;
 }
 .changepassword-container .update-button{
 	padding-left: 0px;
 	padding-top: 20px;
 }
 #change-password .password{
	padding-top: 15px;
 }
 #changecontact-container,#changeemail-container,#changepassword-container {
	max-width: 400px;
	width: 90%;
	float: left;
}
/*==================================*\
			&email-form
\*==================================*/
.new-email,.retype-email,.password{
	max-width: 280px;
	position: relative;
	width: 100%;
}
span.body-text-small{
	padding: 10px 20px;
	float: left;
}
.notify span.body-text-small{
	padding: 0;
}

/*==================================*\
			&GIFTCARD PAGE
\*==================================*/
.giftcard-buttons {
  width: 100%;
  padding: 20px 0px 100px 20px;
}
.redeem-button {
	float: left;
  padding-right: 35px;
}

/*==================================*\
			&EDIT-CONTACT
\*==================================*/
#change-contact{
	width: 65%;
  /* float: left; */
  padding-top: 20px;
}
#change-contact .phone-num,.last-name{
	padding-top: 10px;

}
#change-contact .phone-num .arrange{
	max-width: 270px;
	width: 100%;
}
#change-contact .notify,.update-button{
	padding-left: 0px;
}
/*==================================*\
			&CHANGE-EMAIL
\*==================================*/
#change-email span.body-text-small{
	padding-left: 0px;
	width: 357px;
}
#change-email{
	padding-top: 20px;
}
#change-email .retype-email{
	padding-top: 15px;
}

/*============================================*\
			&CHANGE-ADDRESS & REVIEW ADD
\*============================================*/
div#editaddress-container,
 #review-container {
  margin-top: 10px;
  margin-bottom: 20px;
}
#editaddress-container .account-header, 
#review-container .account-header{
	font-size: 14px;
	font-family: 'BrandonGrotesque-Bold';
	padding: 10px 0 10px 20px; 
}
#editaddress-container .content, 
#review-container .content{
	 font-family: 'ProximaNova-regular';
	 font-size: 12px;
	 color: #9B9B9B;
	 width: 100%;
	 /*float: left;*/
	 min-height: 100px;
}
ol{
	padding-left: 20px;
	font-weight: bolder;
}
.content .address{
	min-height: 160px;
	width: 33.33%;
	float: left;
	padding: 2px 32px 6px 9px;
	list-style: initial;
	list-style-type: decimal;
}
.address-content{
	width: 150px;
	float: left;
	max-height: 140px;
	font-weight: normal;
}
/*ol li{
	list-style-type: decimal;
}*/
#editaddress-container .content ol li span,
 #review-container .content ol li span{
	width: 100%;
	float: left;
	padding: 6px 0;

}
#editaddress-container .content ol li span:last-child, 
#review-container .content ol li span:last-child{
	cursor: pointer;
	font-family: 'BrandonGrotesque-Bold';
	padding-top: 20px;
	width: 240px;
}
#editaddress-container .content ol li span:nth-child(5),
#review-container .content ol li span:nth-child(5){
	font-family: 'BrandonGrotesque-Bold';
	padding-top: 20px;
	width: 240px;
}
.green{
	color:#A9D77B;
}
.address .button{
	width: 100px;
	float: right;
	font-weight: normal;
}
.address .edit-button,.remove-button{
	float: right;
}
.button-changeaddress{
	width: 100%;
	clear: both;
	padding-left: 24px;
	padding-bottom: 20px;
}
.button-changeaddress .btn:last-child{
	margin-left: 20px;
}
.non-primary-address, .primary-address{
	display: none;
}
/* ... */

